Fixed SA vote button not showing

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -151,7 +151,7 @@ html, body {
   display: inline-block;
 }
 
-.showhov .argbtn{
+.showhov .showbtn{
   display: none;
 }
 
